@@ -213,7 +213,8 @@ ipmi_ctx_set_flags (ipmi_ctx_t ctx, unsigned int flags)
 			     | IPMI_FLAGS_NOSESSION
                              | IPMI_FLAGS_DEBUG_DUMP
                              | IPMI_FLAGS_NO_VALID_CHECK
-			     | IPMI_FLAGS_NO_LEGAL_CHECK);
+			     | IPMI_FLAGS_NO_LEGAL_CHECK
+			     | IPMI_FLAGS_IGNORE_AUTHENTICATION_CODE);
 
   if (!ctx || ctx->magic != IPMI_CTX_MAGIC)
     {
