@@ -116,8 +116,9 @@ workarounds are supported: assumeio, spinpoll, idzero, forcepermsg,
 unexpectedauth, endianseq, authcap, intel20, supermicro20, sun20,
 opensesspriv, integritycheckvalue, solpayloadsize, solport, solstatus,
 skipchecks, assumesystemevent, discretereading,
-ignorescanningdisabled, assumebmcowner, slowcommit, veryslowcommit,
-solchannelassumelanchannel, ignorestateflag, malformedack.
+ignorescanningdisabled, assumebmcowner, ignoreauthcode, slowcommit,
+veryslowcommit, solchannelassumelanchannel, ignorestateflag,
+malformedack.
 
 .SH "SDR OPTIONS"
 The following options are specific to tools that use the sensor 
