@@ -1,3 +1,10 @@
+2011-12-19  Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/: Support IPMI_FLAGS_IGNORE_AUTHENTICATION_CODE
+	workaround flag.
+
+	* ipmi-sensors/: Support 'ignoreauthcode' workaround flag.
+	
 2011-12-16  Kaiwang Chen <kaiwang.chen@gmail.com>
 
 	* contrib/pet/petalert.pl, contrib/pet/README: Support and
